# fraud_detection_model

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data_prep.yaml  ensemble.yaml  isolation_forest.yaml  lightgbm.yaml  mlp.yaml  stack.yaml
data_processed/: manifest.json
exploratory/: README.md  processed_model_selection.py  unprocessed_model_selection.py
outputs/isolation_forest/: training_results.json
outputs/lightgbm/: training_results.json
outputs/lr_baseline/: training_results.json
outputs/lr_weighted/: training_results.json
outputs/meta_mlp/: config_copy.yaml  training_results.json
outputs/mlp/: config_copy.yaml  training_results.json
outputs/rf_balanced_s0.01/: training_results.json
outputs/rf_balanced_s0.05/: training_results.json
outputs/rf_balanced_s0.1/: training_results.json
outputs/rf_balanced_s0.5/: training_results.json
outputs/rf_balanced_s1.0/: training_results.json
outputs/rf_baseline/: training_results.json
outputs/stack_A/: training_results.json
reports/: ensemble_report.txt  layer0.txt  meta_model.txt  stack_selection.txt
scripts/: check_readme_metrics.py  download_data.py  ensamble_models.py  ensemble_models.py  eval_stack.py  isolation_forest.py  layer0_models.py  prepare_data.py  processed_model_selection.py  select_layer0.py  serve.py  train_layer0_mlp.py  train_lightgbm.py  train_stack.py  train_stack_mlp.py  unprocessed_baselines.py  unprocessed_model_selection.py
src/fd/: common.py  (+2 more)
tests/: conftest.py  test_evaluation.py  test_features.py
(+21 files in other folders)
